public/stylesheet.css
/* ... */
@media (max-width: 1080px) {
  :root {
    --side-offset: 3rem;
  }
}
@media (max-width: 860px) {
  :root {
    --side-offset: 1.5rem;
  }
}
@media (max-width: 640px) {
  :root {
    font-size: 130%;
  }
}

/* Color schemes */

@media (prefers-color-scheme: dark) {
  :root {
    --asset-svg-copy: var(--dm-asset-svg-copy);
    --asset-svg-copied: var(--dm-asset-svg-copied);
    --asset-svg-external-link: var(--dm-asset-svg-external-link);
    --asset-svg-legal: var(--dm-asset-svg-legal);
    --color-background: var(--dm-color-background);
    --color-background-transparent: var(--dm-color-background-transparent);
    --color-background-card: var(--dm-color-background-card);
    --color-text-default: var(--dm-color-text-default);
    --color-text-light: var(--dm-color-text-light);
    --color-svg-default: var(--dm-color-svg-default);
    --color-button-border: var(--dm-color-button-border);
    --color-button-hover: var(--dm-color-button-hover);
    --color-button-active: var(--dm-color-button-active);
    --color-button-text-hover: var(--dm-color-button-text-hover);
    --color-disabled: var(--dm-color-disabled);
    --color-grid-item-divider: var(--dm-color-grid-item-divider);
    --color-shadows: var(--dm-color-shadow);
    --color-link: var(--dm-color-link);
    --color-link-hover: var(--dm-color-link-hover);
    --color-link-visited: var(--dm-color-link-visited);
  }
}
@media (prefers-color-scheme: light) {
  :root {
    --asset-svg-copy: var(--lm-asset-svg-copy);
    --asset-svg-copied: var(--lm-asset-svg-copied);
    --asset-svg-external-link: var(--lm-asset-svg-external-link);
    --asset-svg-legal: var(--lm-asset-svg-legal);
    --color-background: var(--lm-color-background);
    --color-background-transparent: var(--lm-color-background-transparent);
    --color-background-card: var(--lm-color-background-card);
    --color-text-default: var(--lm-color-text-default);
    --color-text-light: var(--lm-color-text-light);
    --color-svg-default: var(--lm-color-svg-default);
    --color-button-border: var(--lm-color-button-border);
    --color-button-hover: var(--lm-color-button-hover);
    --color-button-active: var(--lm-color-button-active);
    --color-button-text-hover: var(--lm-color-button-text-hover);
    --color-disabled: var(--lm-color-disabled);
    --color-grid-item-divider: var(--lm-color-grid-item-divider);
    --color-shadows: var(--lm-color-shadow);
    --color-link: var(--lm-color-link);
    --color-link-hover: var(--lm-color-link-hover);
    --color-link-visited: var(--lm-color-link-visited);
  }
}

body.dark {
  --asset-svg-copy: var(--dm-asset-svg-copy);
  --asset-svg-copied: var(--dm-asset-svg-copied);
  --asset-svg-external-link: var(--dm-asset-svg-external-link);
  --asset-svg-legal: var(--dm-asset-svg-legal);
  --color-background: var(--dm-color-background);
  --color-background-transparent: var(--dm-color-background-transparent);
  --color-background-card: var(--dm-color-background-card);
  --color-text-default: var(--dm-color-text-default);
  --color-text-light: var(--dm-color-text-light);
  --color-svg-default: var(--dm-color-svg-default);
  --color-button-border: var(--dm-color-button-border);
  --color-button-hover: var(--dm-color-button-hover);
  --color-button-active: var(--dm-color-button-active);
  --color-button-text-hover: var(--dm-color-button-text-hover);
  --color-disabled: var(--dm-color-disabled);
  --color-grid-item-divider: var(--dm-color-grid-item-divider);
  --color-shadows: var(--dm-color-shadow);
  --color-link: var(--dm-color-link);
  --color-link-hover: var(--dm-color-link-hover);
  --color-link-visited: var(--dm-color-link-visited);
}
body.light {
  --asset-svg-copy: var(--lm-asset-svg-copy);
  --asset-svg-copied: var(--lm-asset-svg-copied);
  --asset-svg-external-link: var(--lm-asset-svg-external-link);
  --asset-svg-legal: var(--lm-asset-svg-legal);
  --color-background: var(--lm-color-background);
  --color-background-transparent: var(--lm-color-background-transparent);
  --color-background-card: var(--lm-color-background-card);
  --color-text-default: var(--lm-color-text-default);
  --color-text-light: var(--lm-color-text-light);
  --color-svg-default: var(--lm-color-svg-default);
  --color-button-border: var(--lm-color-button-border);
  --color-button-hover: var(--lm-color-button-hover);
  --color-button-active: var(--lm-color-button-active);
  --color-button-text-hover: var(--lm-color-button-text-hover);
  --color-disabled: var(--lm-color-disabled);
  --color-grid-item-divider: var(--lm-color-grid-item-divider);
  --color-shadows: var(--lm-color-shadow);
  --color-link: var(--lm-color-link);
  --color-link-hover: var(--lm-color-link-hover);
  --color-link-visited: var(--lm-color-link-visited);
}

/* General */

body {
  background-color: var(--color-background);
  color: var(--color-text-default);
  display: flex;
  flex-direction: column;
  min-height: 100%;
}

button {
  background: none;
  border: none;
  cursor: pointer;
  outline: 0;
}

a {
  color: inherit;
  cursor: pointer;
  text-decoration: none;
}

/* Header */

.header {
  margin: 5rem 0 2rem;
  padding: 1rem var(--side-offset);
}
@media (max-width: 860px) {
  .header {
    margin-top: 2rem;
  }
}
@media (max-width: 640px) {
  .header {
    margin: 1rem 0 2rem;
  }
}

.header__title {
  font-family: 'Roboto Mono', monospace;
  font-size: 1.7rem;
  font-weight: 600;
  flex-basis: 40%;
  margin: 0 0 0.5rem;
}

.header__description {
  font-family: 'Roboto Mono', monospace;
  font-size: 0.9rem;
  margin: 0.2rem 0;
}

.header__list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  float: right;
  justify-content: flex-end;
  list-style: none;
  margin: 0.2rem 0 0;
}
@media (max-width: 640px) {
  .header__list {
    float: none;
    justify-content: space-around;
    margin: 0 0 1rem;
  }
}

.header__list-item {
  font-family: 'Roboto Mono', monospace;
  font-size: 1rem;
  font-weight: 600;
  margin: 0 0.7rem;
}
/* ... */

